[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["wesoree <wesleylo174@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
numpy = "^1.23.5"
sympy = "^1.11.1"
python-math = "^0.0.1"
parse = "^1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
